# group-37-m5-14-Connectify

./: .gitignore  pyproject.toml  requirements.txt  schema.yaml  vercel.json
comments/: models.py  serializers.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
connectify/: settings.py  urls.py  wsgi.py
follows/: models.py  serializers.py  views.py
follows/migrations/: 0001_initial.py  0002_initial.py  0003_alter_follow_options.py
friends/: models.py  permissions.py  serializers.py  views.py
friends/migrations/: 0001_initial.py  0002_initial.py  0003_alter_friend_options.py
likes/: models.py  serializers.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
posts/: models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_options_post_created_at_post_is_private.py  0004_alter_post_options.py
posts/tests/: default_test_case.py  test_comment.py  test_like.py  test_post.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: default_test_case.py  test_follow.py  test_friend.py  test_login.py  test_user.py
